--- a/beginner/Gemfile
+++ b/beginner/Gemfile
@@ -66,3 +66,7 @@ gem 'sassc-rails', '>= 2.1.0'
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
 gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
+
+gem 'rails_admin', '~> 2.0'
+
+gem 'mysql2'
