--- a/beginner/config/database.yml
+++ b/beginner/config/database.yml
@@ -5,21 +5,35 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: sqlite3
+  adapter: mysql2    #adapter: sqlite3
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  timeout: 5000
+#  timeout: 5000
+
+  #===mysql2
+  # encoding: utf8
+  # database: my_db_name
+  username: root
+  password: gecko520
+  # host: 127.0.0.1
+  # port: 3306
+  # flags:
+  #   - -COMPRESS
+  #   - FOUND_ROWS
+  #   - MULTI_STATEMENTS
+  # secure_auth: false
+
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  database:  BEDev  #db/development.sqlite3
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+  database: BETest  #db/test.sqlite3
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: BEpro  # db/production.sqlite3
