add cart and cart_item model

--- a/beginner/config/database.yml
+++ b/beginner/config/database.yml
@@ -12,8 +12,8 @@ default: &default
   #===mysql2
   # encoding: utf8
   # database: my_db_name
-  username: root
-  password: gecko520
+  username: benny
+  password: 'Witness--08118'
   # host: 127.0.0.1
   # port: 3306
   # flags:
@@ -21,7 +21,6 @@ default: &default
   #   - FOUND_ROWS
   #   - MULTI_STATEMENTS
   # secure_auth: false
-
 
 development:
   <<: *default
