--- a/beginner/Gemfile
+++ b/beginner/Gemfile
@@ -70,3 +70,4 @@ gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 gem 'rails_admin', '~> 2.0'
 
 gem 'mysql2'
+gem 'carrierwave', '~> 2.0'
